FrontEnd/Core/Scss/masterpage.scss
/* ... */
#modules-strip {
    display: flex;
    
    flex: 1 1 auto;
    
    column-gap: 1px;
    margin-top: 8px;
    min-width: 0;
    
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
}

.modules-strip-tab {
    display: flex;
    align-items: center;
    column-gap: 10px;
    
    flex: 0 0 auto;

    padding: 12px 16px;
    border-radius: 8px 8px 0 0;
    
    background-color: #031B53;
    color: #C7D0E5;
    
    & > *:not(.tab-strip-button) {
        pointer-events: none;
    }       

    & > .modules-strip-tab-title {
        font-size: 0.85em;
        font-weight: 300;
        max-width: 150px;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
        color: #C7D0E5;
    }
    
    &.active {
        background-color: #F5F5F5;
        color: currentColor;
        border: 1px solid currentColor;
        border-bottom-color: #F4F5F7;
        z-index: 2;

        & > .modules-strip-tab-title {
            font-weight: 600;
            color: currentColor;
        }

        /*&:after { --> streep onderin actieve tab
            content: "";
            position: absolute;
            bottom: 0;
            left: 50%;
            transform: translateX(-50%);
            width: 60%;
            height: 3px;
            background-color: #23caab;
            border-radius: 2px;
        }*/
    }
    
    &:not(.active) {
        cursor: pointer;
        
        &:hover {
            background-color: #021644;
        }
    }
}

.tab-strip-button {
    width: 32px;
    height: 32px;
}

#coder-container {
    min-width: 0;
    
    & > main {
        flex-grow: 1;
        
        & > .logo-ghost-container {
            display: flex;
            justify-content: center;
            align-items: center;

            width: 100%;
            height: 100%;
        }
    }
}

.logo-ghost-container > .logo-ghost {
    filter: grayscale(100%) brightness(0.1);
    opacity: 0.06;
    width: 128px;
    height: auto;
}

.coder-highlight {
    color: var(--coder-tertiary-color);
}

body {
    background-color: #c1c1c1;
}

#invista-qs-container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    
    display: flex;
    justify-content: center;
    align-items: center;

    z-index: 50001;
}

#invista-qs-dialog {
    width: 650px;
    max-width: 90%;
    
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 18px;
    
    font-family: 'Coder', sans-serif;
}

#invista-qs-search, #invista-qs-results, .invista-qs-no-results {
    background-color: #fff;
    border-radius: 12px;
    padding: 12px;
}

#invista-qs-search {
    width: 100%;
    height: 64px;

    display: flex;
    align-items: center;
    column-gap: 8px;

    & > input.qs-search-input {
        flex-grow: 1;
        
        &:focus {
            border-color: var(--coder-tertiary-color);
        }
    }
}

.invista-qs-search-input {
    border: none;
    font-size: 18px;
    flex-grow: 1;
}

#invista-qs-results {
    height: 500px;
    width: 100%;
    overflow-y: scroll;
    
    display: flex;
    flex-direction: column;
    gap: 2px;
}

.invista-qs-result-entry {
    display: flex;
    gap: 12px;
    padding: 8px;
    font-weight: 600;
    
    &:nth-child(even) {
        background-color: #f9f9f9;
    }
}

.invista-qs-result-entry-title {
    flex-grow: 1;
}

.invista-qs-no-results {
    width: 100%;
    text-align: center;
    color: #8d8d8d;
}

#invista-qs-overlay {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: rgba(36, 36, 39, 0.3);
    z-index: 50000;
}

.invista-qs-dialog-enter-active,
.invista-qs-dialog-leave-active {
    transition: all 0.18s ease;
}

.invista-qs-dialog-enter-from,
.invista-qs-dialog-leave-to {
    transform: scale(0.85);
    opacity: 0;
}

.invista-qs-dialog-enter-to,
.invista-qs-dialog-leave-from {
    transform: scale(1);
    opacity: 1;
}

.invista-qs-dialog-results-enter-active,
.invista-qs-dialog-results-leave-active {
    transition: all 0.3s ease;
}

.invista-qs-dialog-results-enter-from,
.invista-qs-dialog-results-leave-to {
    bottom: 100%;
}

.invista-qs-dialog-results-enter-to,
.invista-qs-dialog-results-leave-from {
    bottom: 0;
}

